gradients and spacing fixes

--- a/css/crate.css
+++ b/css/crate.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     text-align: center;
     background-color: var(--primary-color);
+    background-image: var(--background-gradient);
     color: var(--text-color);
     font-family: var(--font-secondary);
 }
@@ -32,7 +33,7 @@ body {
     max-height: 400px;
     overflow-y: scroll;
     scrollbar-width: thin;
-    margin-bottom: 25px; /* temp for while red button is an a item */
+    margin-bottom: 40px; /* temp for while red button is an a item */
     max-width: 55%;
 }
 .item {
@@ -53,9 +54,11 @@ body {
     color:#ffffff;
     font-weight: bold;
     padding: 20px 10px;
-    margin-top: 25px;
+    margin-top: 20px;
+    border-radius: 10px;;
 }
 
+/* all the different rarities as color classes. will be borders for images later*/
 .common { border: 2px solid rgb(0, 4, 255); background: #21deff; }
 .common:hover{background: #18a6be;}
 .uncommon { border: 2px solid rgb(98, 0, 255); background: #a288ff; }
