--- a/css/item.css
+++ b/css/item.css
@@ -5,6 +5,7 @@ body {
     font-family: var(--font-secondary);
     background-color: var(--primary-color);
     color: var(--text-color);
+    background-image: var(--background-gradient);
     
 }
 
@@ -56,9 +57,10 @@ body {
     margin-top: 10px;
     border: none;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
     transition: background 0.3s ease, transform 0.2s ease;
     border-radius: 5px;
+    font-family: var(--font-main);
 }
 
 .sell-btn:hover {
